// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: template ref transform > component static ref 1`] = `
"import { createTemplateRefSetter as _createTemplateRefSetter, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const _setTemplateRef = _createTemplateRefSetter()
  const n0 = _createAssetComponent("Foo", null, null, true)
  _setTemplateRef(n0, "foo")
  return n0
}"
`;

exports[`compiler: template ref transform > dynamic ref 1`] = `
"import { setTemplateRefBinding as _setTemplateRefBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setTemplateRefBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`compiler: template ref transform > function ref 1`] = `
"import { createTemplateRefSetter as _createTemplateRefSetter, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const _setTemplateRef = _createTemplateRefSetter()
  const n0 = t0()
  _renderEffect(() => {
    const _foo = _ctx.foo
    _setTemplateRef(n0, bar => {
        _foo.value = bar
        ;({ baz: _ctx.baz } = bar)
        console.log(_foo.value, _ctx.baz)
      })
  })
  return n0
}"
`;

exports[`compiler: template ref transform > ref + v-for 1`] = `
"import { createTemplateRefSetter as _createTemplateRefSetter, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx) {
  const _setTemplateRef = _createTemplateRefSetter()
  const n0 = _createFor(() => ([1,2,3]), (_for_item0) => {
    const n2 = t0()
    _setTemplateRef(n2, "foo", true)
    return n2
  }, undefined, 4)
  return n0
}"
`;

exports[`compiler: template ref transform > ref + v-if 1`] = `
"import { createTemplateRefSetter as _createTemplateRefSetter, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const _setTemplateRef = _createTemplateRefSetter()
  const n0 = _createIf(() => (true), () => {
    const n2 = t0()
    _setTemplateRef(n2, "foo")
    return n2
  }, null, 1, true)
  return n0
}"
`;

exports[`compiler: template ref transform > static ref (inline mode) 1`] = `
"
  const n0 = t0()
  _setStaticTemplateRef(n0, foo, null, "foo")
  return n0
"
`;

exports[`compiler: template ref transform > static ref 1`] = `
"import { setStaticTemplateRef as _setStaticTemplateRef, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setStaticTemplateRef(n0, "foo")
  return n0
}"
`;
